2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* l4/ipc.h (_L4_msg_put): Correctly advance ANY_TYPED.
	(_L4_msg_get): Likewise.

2007-12-08  Neal H. Walfield  <neal@gnu.org>

	* ia32/l4/bits/vregs.h (_L4_utcb_base): New function.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* l4/thread-start.h (_L4_thread_start): Don't send, reply.

2007-10-26  Neal H. Walfield  <neal@gnu.org>

	* l4/math.h (_L4_msb64): New function.
	(_L4_lsb64): Likewise.
	* l4/gnu/math.h (l4_msb64): Likewise.
	(l4_lsb64): Likewise.

2007-10-16  Neal H. Walfield  <neal@gnu.org>

	* l4/gnu/ipc.h (l4_set_msg_msg_tag): Rename from this...
	(l4_msg_set_msg_tag): ... to this.
	(l4_msg_set_untyped_words): New function.
	(l4_msg_set_typed_words): Likewise.
	(l4_msg_set_words): Likewise.

2007-08-05  Neal H. Walfield  <neal@gnu.org>

	* l4/pagefault.h (_L4_pagefault_reply_formulate): New function.
	(_L4_pagefault_reply): Refactor code into the above new function
	and use it.
	* l4/gnu/pagefault.h (l4_pagefault_reply): New function.

2007-07-27  Neal H. Walfield  <neal@gnu.org>

	* l4/abi.h: New file.
	* v2/Makefile.am: New file.
	* v2/ia32/Makefile.am: New file.
	* v2/ia32/l4/abi/bits/kip.h: New file.
	* v2/l4/abi/abi.h: New file.
	* v2/l4/abi/kip.h: New file.
	* x2/Makefile.am: New file.
	* x2/l4/abi/abi.h: New file.
	* x2/l4/abi/kip.h: New file.
	* headers.m4: Configure a link from libl4/l4/abi.h to
	include/l4/abi.h, libl4/${l4_abi}/l4/abi/kip.h to
	include/l4/abi/kip.h, libl4/${l4_abi}/l4/abi/abi.h to
	include/l4/abi/abi.h.  If L4_AVI is v2, then also configure a link
	from libl4/v2/${arch}/l4/abi/bits/kip.h to
	include/l4/abi/bits/kip.h.
	* Makefile.am [L4_ABI_V2]: Set L4_ABI_SUBDIR to v2.
	[L4_ABI_X2]: Set L4_ABI_SUBDIR to x2.
	(SUBDIRS): Also include $(L4_ABI_SUBDIR).
	* l4.h: Include <l4/abi.h>.
	* l4/kip.h: Include <l4/abi/kip.h>.
	(_L4_API_VERSION_L4SEC): New define.
	(_L4_API_VERSION_N1): Likewise.
	(_L4_API_VERSION_2PP): Likewise.
	(__L4_kernel_version_t): New typedef.